# GrabTheSite

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  KIMI.md  LICENSE  README.md  app_config.py  compile_translations.py  config.py  diagnose_threads.py  entry_points.py  grab_the_site.py  gui_app.py  logger.py  pdf_gui.py  pdf_the_site.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
.trae/documents/: 配置文件支持功能规划.md
cli/: __init__.py  base_cli.py
config/: config.yaml  default.yaml  test.yaml
crawler/: __init__.py  crawl_site.py  crawler.py  downloader.py  fetcher.py  link_extractor.py  save_site.py  url_filter.py
docs/: CODE_QUALITY_REPORT.md  COMMAND_LINE.md  GUI.md  PDF.md  PDFTHESITE_PLAN.md  PDF_GUI.md  PDF_GUI_SYSTEMEXIT_ANALYSIS.md  PLAYWRIGHT_CRASH_ANALYSIS.md  PLUGINS.md  README.md  ROADMAP.md
gui/: __init__.py  base_main_window.py  config_panels.py  log_panel.py  main_window.py  pdf_main_window.py
locale/en/LC_MESSAGES/: grabthesite.po
locale/zh_CN/LC_MESSAGES/: grabthesite.po
models/: __init__.py  config.py  crawl_task.py  page.py
plugins/: __init__.py  base.py  hooks.py
plugins/example_plugin/: __init__.py
plugins/pdf_plugin/: __init__.py  bookmark_builder.py  link_processor.py  pdf_generator.py  pdf_merger.py
plugins/save_plugin/: __init__.py
state/: grabthesite.json  gui_state.json
tests/unit/: test_config_manager.py  test_error_handler.py  test_events.py  test_http_client.py  test_link_extractor.py  test_state_manager.py  test_url_filter.py  test_url_utils.py
utils/: __init__.py  browser_manager.py  config_manager.py  error_handler.py  events.py  exceptions.py  http_client.py  i18n.py  js_renderer.py  js_renderer_playwright.py  plugin_manager.py  rate_limiter.py  sitemap_generator.py  state_manager.py  timestamp_utils.py  url_utils.py
